[gd_scene load_steps=16 format=3 uid="uid://c1kpwx5v8mh5r"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_player"]
[ext_resource type="Script" path="res://components/state_machine/state_machine.gd" id="2_state_machine"]
[ext_resource type="Script" path="res://characters/player/states/player_idle.gd" id="3_idle"]
[ext_resource type="Script" path="res://characters/player/states/player_walk.gd" id="4_walk"]
[ext_resource type="Script" path="res://characters/player/states/player_run.gd" id="5_run"]
[ext_resource type="Script" path="res://characters/player/states/player_attack.gd" id="6_attack"]
[ext_resource type="Script" path="res://characters/player/states/player_hurt.gd" id="7_hurt"]
[ext_resource type="Script" path="res://characters/player/states/player_dodge.gd" id="8_dodge"]
[ext_resource type="Script" path="res://characters/player/states/player_death.gd" id="9_death"]
[ext_resource type="Script" path="res://characters/player/states/player_special_attack.gd" id="13_special_attack"]
[ext_resource type="Script" path="res://characters/player/states/player_combo_attack.gd" id="14_combo_attack"]
[ext_resource type="PackedScene" uid="uid://progression_comp_001" path="res://components/progression/progression_component.tscn" id="15_progression"]
[ext_resource type="Script" path="res://characters/player/states/player_charge_attack.gd" id="16_charge_attack"]
[ext_resource type="Script" path="res://characters/player/states/player_ground_pound.gd" id="17_ground_pound"]
[ext_resource type="Script" path="res://characters/player/states/player_block.gd" id="18_block"]
[ext_resource type="PackedScene" uid="uid://guard_component" path="res://components/guard/guard_component.tscn" id="19_guard"]
[ext_resource type="Script" path="res://components/hitbox/hitbox.gd" id="10_hitbox"]
[ext_resource type="Script" path="res://components/hurtbox/hurtbox.gd" id="11_hurtbox"]
[ext_resource type="Script" path="res://components/health/health_component.gd" id="12_health"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_player"]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(14, 12)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hurtbox"]
radius = 7.0
height = 18.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_player")

[node name="GlowOutline" type="Polygon2D" parent="."]
z_index = -1
color = Color(1, 0.95, 0.4, 0.5)
polygon = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)

[node name="Sprite2D" type="Polygon2D" parent="."]
color = Color(0.85, 0.7, 0.45, 1)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_player")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 5.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_state_machine")
initial_state_path = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_idle")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("4_walk")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("5_run")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_attack")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("7_hurt")

[node name="Dodge" type="Node" parent="StateMachine"]
script = ExtResource("8_dodge")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("9_death")

[node name="SpecialAttack" type="Node" parent="StateMachine"]
script = ExtResource("13_special_attack")

[node name="ComboAttack" type="Node" parent="StateMachine"]
script = ExtResource("14_combo_attack")

[node name="ChargeAttack" type="Node" parent="StateMachine"]
script = ExtResource("16_charge_attack")

[node name="GroundPound" type="Node" parent="StateMachine"]
script = ExtResource("17_ground_pound")

[node name="Block" type="Node" parent="StateMachine"]
script = ExtResource("18_block")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("10_hitbox")
damage = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(12, 0)
shape = SubResource("RectangleShape2D_hitbox")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 128
script = ExtResource("11_hurtbox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_hurtbox")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("12_health")
max_health = 100
emit_global_events = true

[node name="ProgressionComponent" parent="." instance=ExtResource("15_progression")]

[node name="GuardComponent" parent="." instance=ExtResource("19_guard")]
